[tool.poetry]
name = "geomeppy"
version = "0.12.0"
description = "Geometry editing for E+ idf files"
authors = ["Jamie Bull <jamie.bull@gmail.com>"]
homepage = "https://github.com/jamiebull1/geomeppy"
repository = "https://github.com/jamiebull1/geomeppy"
documentation = "http://geomeppy.readthedocs.io/en/latest/"
keywords = ["EnergyPlus", "geometry", "building performance simulation"]
license = "MIT"
readme = "README.md"
include = ["LICENSE"]
classifiers=[
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
eppy = "^0.5.60"
matplotlib = "^3.6.2"
pypoly2tri = "^0.0.3"
shapely = "^1.8.5.post1"
transforms3d = "^0.4.1"
pyclipper = "^1.3.0.post3"
esoreader = "^1.2.3"
numpy = "^1.22"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
codecov = "^2.1.12"
black = "^22.10.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
