[tool.poetry]
name = "geomeppy"
version = "0.12.2"
description = "Geometry editing for E+ idf files"
authors = ["Jamie Bull <jamie.bull@gmail.com>"]
homepage = "https://github.com/jamiebull1/geomeppy"
repository = "https://github.com/jamiebull1/geomeppy"
documentation = "http://geomeppy.readthedocs.io/en/latest/"
keywords = ["EnergyPlus", "geometry", "building performance simulation"]
license = "MIT"
readme = "README.md"
include = ["LICENSE"]
classifiers=[
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.10"
eppy = "^0.5.60"
matplotlib = "^3.6.2"
pypoly2tri = "^0.0.3"
shapely = "^1.8.5.post1"
transforms3d = "^0.4.1"
pyclipper = "^1.3.0.post3"
esoreader = "^1.2.3"
numpy = "^1.22"
lxml = "^4.9.1"
# optional testing dependencies
pytest = {version = "^7.2", optional = true}
pytest-cov = {version = "^4.0.0", optional = true}
# optional lint dependencies
black = {version = "^22.10.0", optional = true}
mypy = {version = "^1.0", optional = true}
flake8 = {version = "^5.0.4", optional = true}

[tool.poetry.extras]
testing = ["pytest", "pytest-cov"]
lint = ["black", "mypy", "flake8"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^1.0"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
